[DOC] Update Copyright
Change files to BSD-2-Clause

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 #
 # Demo Serial Server VM
 #
-# Copyright (C) 2022-2023, HENSOLDT Cyber GmbH
+# Copyright (C) 2022-2024, HENSOLDT Cyber GmbH
+# 
+# SPDX-License-Identifier: BSD-2-Clause
 #
 
 cmake_minimum_required(VERSION 3.8.2)
